# cppGame

./: CMakeLists.txt  README.md
include/: Entity.hpp  FrameRateController.hpp  InputManager.hpp  Math.hpp  Player.hpp  RenderWindow.hpp  Renderable.hpp  ResourceManager.hpp  Utils.hpp
src/: Entity.cpp  FrameRateController.cpp  InputManager.cpp  Player.cpp  RenderWindow.cpp  Renderable.cpp  ResourceManager.cpp  main.cpp
